--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body class="ct-scroll_none">
+    <!-- Acabas de descubrir un easter egg. Introduce el código F12PARAMAS para obtener un +1 en ocultismo. -->
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
